# MLops

./: .gitignore  README.md  commands.py  homework_simonova.ipynb  mnist-logistic.onnx  mnist-logistic2.onnx  pyproject.toml
.dvc/: config
config/: config.yaml
data/: MNIST.dvc
mlops/: data_module.py  infer.py  model.py  train.py  triton.py
triton/: docker-compose.yaml  report.md
triton/model_repository/mnist_model/: config.pbtxt
triton/model_repository/mnist_model/1/: model.onnx
week07_finetuning/: nlp_seminar_7.ipynb
